--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,11 @@ trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  name: Default
+  demands:
+   - agent.name -equals 'Docker Agent - Linux'
+
+
 
 steps:
 - task: NodeTool@0
