Update azure-pipelines.yml for Azure Pipelines
Try to fix blob storage upload

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,9 +18,9 @@ steps:
 
 - task: AzureFileCopy@6
   inputs:
-    SourcePath: 'sourceFolder????????'
+    SourcePath: 'chakai-pe2-app'
     azureSubscription: 'Azure subscription 1(a4ec0aaa-da74-41fa-a4fe-f5b422397ece)'
     Destination: 'AzureBlob'
-    storage: 'chakaip2efrontend'
-    ContainerName: 'ChakaiP2EContainer'
+    storage: 'chakaip2efrontend' 
+    ContainerName: 'chakaiP2EContainer'
     CleanTargetBeforeCopy: true
