--- a/chakai-p2e-app/package.json
+++ b/chakai-p2e-app/package.json
@@ -4,24 +4,23 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && cpx \"public/**/*\" .next/standalone/public && cpx \".next/static/**/*\" .next/standalone/.next/static",
-    "start": "node .next/standalone/server.js",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "15.0.3"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "cpx": "^1.5.0",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3"
   }
 }
